# docker_aws_cloudwatch_test_task

./: .gitignore  README.md  main.py  pyproject.toml
drivers/: aws.py  docker.py
