[tool.poetry]
name = "test-task-containers-logs"
version = "0.1.0"
description = ""
authors = ["IvanGorbunov <falseprogrammerfirst@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
docker = "^7.0.0"
boto3 = "^1.34.94"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
